Bug #76967: back off failed watchdog starts and keep stale dump paths off stall exceptions
Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>